--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Importing fonts from Google */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap');
 
 *{
     font-family: 'Poppins', sans-serif;
@@ -7,6 +8,14 @@
 
 body {
         background: linear-gradient(white, rgb(130, 129, 129));
+}
+
+h1{
+    font-family: "RocknRoll One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 5rem;
+    text-align: center;
 }
 
 /* Using flex with the column direction to
